// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav component should render component for authenticated user 1`] = `
<div>
  <ul
    className="side-nav fixed"
    id="slide_out"
  >
    <li>
      <Link
        replace={false}
        to="/"
      >
        Home
      </Link>
    </li>
    <li>
      <ul
        className="collapsible"
        data-collapsible="accordion"
      >
        <li>
          <div
            className="collapsible-header black-text"
          >
            Category
          </div>
          <div
            className="collapsible-body"
          >
            <ul>
              <li>
                <a
                  className="collection-item"
                  name="breakfast"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Breakfast
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="lunch"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Lunch
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="dinner"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Dinner
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="appetizer"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Appetizer
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="main"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Main
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="dessert"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Dessert
                </a>
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </li>
    <li>
      <div
        className="divider"
      />
    </li>
    <div>
      <li>
        <Link
          replace={false}
          to="/users/2/dashboard"
        >
          Dashboard
        </Link>
      </li>
      <li>
        <div
          className="divider"
        />
      </li>
      <div>
        <li>
          <a
            href="#!"
            name="user-profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            href="#!"
            name="user-recipes"
            onClick={[Function]}
          >
            Recipes
            <span
              className="badge"
            >
              0
            </span>
          </a>
        </li>
        <li>
          <a
            href="#!"
            name="user-favorites"
            onClick={[Function]}
          >
            Favorites
            <span
              className="badge"
            >
              0
            </span>
          </a>
        </li>
      </div>
      <div>
        <li>
          <a>
            Notifications
            <span
              className=" badge switch"
            >
              <label
                htmlFor="notification-switch"
              >
                <input
                  defaultChecked={false}
                  id="notification-switch"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </span>
          </a>
        </li>
        <li>
          <div
            className="divider"
          />
        </li>
      </div>
      <li>
        <a
          className="logout-button"
          onClick={[MockFunction]}
          role="button"
          tabIndex="0"
        >
          Logout
        </a>
      </li>
    </div>
  </ul>
</div>
`;

exports[`SideNav component should render component for unauthenticated user 1`] = `
<div>
  <ul
    className="side-nav null"
    id="slide_out"
  >
    <li>
      <Link
        replace={false}
        to="/"
      >
        Home
      </Link>
    </li>
    <li>
      <ul
        className="collapsible"
        data-collapsible="accordion"
      >
        <li>
          <div
            className="collapsible-header black-text"
          >
            Category
          </div>
          <div
            className="collapsible-body"
          >
            <ul>
              <li>
                <a
                  className="collection-item"
                  name="breakfast"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Breakfast
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="lunch"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Lunch
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="dinner"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Dinner
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="appetizer"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Appetizer
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="main"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Main
                </a>
              </li>
              <li>
                <a
                  className="collection-item"
                  name="dessert"
                  onClick={[MockFunction]}
                  role="button"
                  tabIndex="0"
                >
                  Dessert
                </a>
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </li>
    <li>
      <div
        className="divider"
      />
    </li>
    <div>
      <li>
        <a
          onClick={[MockFunction]}
          role="button"
          tabIndex="0"
        >
          Sign In
        </a>
      </li>
      <li>
        <a
          onClick={[MockFunction]}
          role="button"
          tabIndex="0"
        >
          Register
        </a>
      </li>
    </div>
  </ul>
</div>
`;
